# ChatBI

./: .env.example  .gitignore  LICENSE  README.md  agent.py  main.py  pyproject.toml
tools/: debug_tools_execute_sqlite.py  example.db  generate_sqlite_data.py  ingest_chromadb.py  mcp_time.py  tools_charts.py  tools_charts_html.py  tools_execute_sqlite.py  tools_rag.py  tools_text2sqlite.py
tools/chroma_langchain_db/: chroma.sqlite3
ui/: sqlitechat_ui.py
